name:                sudoku
version:             0.1.0.0
synopsis:            Generate sudoku puzzles of graded difficulty level.
description:         Please see README.md
homepage:            https://github.com/htoigo/sudoku#readme
license:             BSD3
license-file:        LICENSE
author:              Harry H. Toigo
maintainer:          hhtoigo@gmail.com
copyright:           Copyright: (c) 2017 Harry H. Toigo
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag profile
  description:       Enable profiling support
  default:           False

library
  hs-source-dirs:      src
  exposed-modules:     Sudoku
                       Sudoku.PrettyPrint
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , random
                     , array
                     , time
  other-modules:       Sudoku.Random
--                     , Sudoku.PrettyPrint
  default-language:    Haskell2010

executable sudoku
  hs-source-dirs:      app
  main-is:             sudoku-cli.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , sudoku
                     , regex
--                     , regex-tdfa
--                     , regex-compat-tdfa
--                     , random
  default-language:    Haskell2010

  if flag(profile)
    ghc-options:       -fprof-auto

executable sudoku-web
  hs-source-dirs:      app
  main-is:             sudoku-web.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , sudoku
                     , random
                     , regex
                     , Spock >= 0.11
                     , mtl
                     , text

  default-language:    Haskell2010

executable tst-rand
  hs-source-dirs:      app
  main-is:             test-random.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  build-depends:       base
                     , random
                     , array
  default-language:    Haskell2010

test-suite sudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sudoku
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hhtoigo/sudoku
